Add more settings to the actions + their edit options. Modified ElevatorActionService to reload actions on ElevatorTypes if the plugin is already loaded. Added ElevatorRegisterActionsEvent for any external plugins that may want to register elevator actions. (Though actions should theoretically be able to be added at any time).